--- a/style.css
+++ b/style.css
@@ -2,3 +2,62 @@ body{
     margin: 0;
     font-family: 'Montserrat', sans-serif;
 }
+section{
+    display: flex;
+}
+.hero-area{
+    padding: 5%;
+
+}
+.half-width{
+    width: 50%;
+}
+.half-width img{
+    width: 80%;
+    margin: 0 auto;
+    display: block;
+}
+h1{
+    font-size: 60px;
+    color: #575757;
+}
+p{
+    font-size: 20px;
+    color: #828282;
+}
+.orange-color {
+    color: #FBA24F;
+    margin-top: 60px;
+    display: inline-block;
+}
+.order-btn, .contact-btn{
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 600;
+    color: #fff;
+    background: linear-gradient(#FBA24F, #FF1E1E);
+    padding: 20px 40px;
+    border-radius: 40px;
+    margin-top: 50px;
+    display: inline-block;
+}
+#about-person-img img{
+    width: 50%;
+}
+#about-person-content h1{
+    margin-top: 130px;
+    font-size: 40px;
+}
+#about-person-content {
+    padding-right: 150px;
+}
+.about-area{
+    background-image: url(images/shapes/7.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.about-area{
+    margin-top: 50px;
+    padding-top: 100px;
+}
