--- a/style.css
+++ b/style.css
@@ -124,3 +124,31 @@ footer p{
     padding-bottom: 60px;
     color: #fff;
 }
+nav{
+    display: flex;
+    justify-content: space-between;
+    padding: 2% 5%;
+}
+.logo a{
+    text-decoration: none;
+    font-size:40px;
+    font-weight: 700;
+    color: #000;
+    border: 1px solid #d8492c;
+    padding: 5px 20px;
+    border-radius: 5px;
+}
+.menu ul li{
+    list-style: none;
+    display: inline-block;
+}
+.menu ul li a {
+    font-size: 20px;
+    text-decoration: none;
+    font-weight: 600;
+    color: #000;
+    padding: 10px 30px;
+}
+.menu ul li a:hover{
+    color: #FD5231;
+}
